[package]
name = "defibrillator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
bytes = "1.0.1"
clap = "2.33.3"
either = "1.6.1"
futures = { version = "0.3.15", default-features = false, features = ["std", "async-await"] }
memchr = "2.4.0"
nom = ">=6.1.0, <6.2.0"
nom-supreme = "0.4.4"
regex = "1.5.4"
reqwest = "0.11.4"
structopt = "0.3.21"
tokio = { version = "1.7.1", features = ["time", "net", "rt", "macros", "rt-multi-thread", "process", "io-std"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
url = "2.2.2"
